--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=7461a6fb2a793bf6d2eaa3ff0e6b750a
 ###< symfony/framework-bundle ###
 
@@ -24,8 +24,9 @@ APP_SECRET=7461a6fb2a793bf6d2eaa3ff0e6b750a
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://localhost:3306/infsecdb?serverVersion=10.5.19-MariaDB-0+deb11u2&charset=utf8mb4"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+# DATABASE_URL="jdbc:mariadb://localhost:3306"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
