--- a/config/packages/routing.yaml
+++ b/config/packages/routing.yaml
@@ -1,6 +1,7 @@
 framework:
     router:
         utf8: true
+        default_uri: 'https://exam-proj-inf-sec.dyncam.com/index/index'
 
         # Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
         # See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
@@ -9,4 +10,5 @@ framework:
 when@prod:
     framework:
         router:
-            strict_requirements: null
+#            strict_requirements: null
+            utf8: true
