--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,18 @@ controllers:
 #app_lucky_number:
 #    path: /lucky/number
 #    controller: App\Controller\LuckyController::number
+
+index:
+    path: /
+    controller: App\Controller\IndexPage::index
+    schemes: [https]
+
+login:
+    path: /login
+    controller: App\Controller\Login::login
+    schemes: [https]
+
+register:
+    path: /register
+    controller: App\Controller\Register::Register
+    schemes: [https]
