--- a/.gitignore
+++ b/.gitignore
@@ -119,17 +119,17 @@ fabric.properties
 .idea/
 
 # Cache and logs
-/var/cache/*
-/var/log/*
+var/cache/*
+var/log/*
 !var/cache/clear_cache.sh
 !var/log/clear_cache.sh
 
 /web/cache
 !web/cache/.gitkeep
 
-/bin/*
+bin/*
 !bin/console
-/vendor/
+vendor/
 
 # User provided content
 /media/archive/
@@ -140,8 +140,8 @@ fabric.properties
 /media/unknown/
 /media/video/
 
-/files/documents/
-/files/downloads/
+files/documents/
+files/downloads/
 
 # Caches/Proxies
 /tests/Shopware/TempFiles/
