--- a/custom/plugins/Chat/composer.json
+++ b/custom/plugins/Chat/composer.json
@@ -1,7 +1,18 @@
 {
   "name": "inf_sec/chat",
-  "description": "Skeleton plugin",
+  "description": "Chat plugin",
   "type": "shopware-platform-plugin",
+  "authors": [
+    {
+      "name": "Emmanuel Scopelliti",
+      "homepage": "https://github.com/EmmanuelScopelliti"
+    },
+    {
+      "name": "Daniel Fischnaller",
+      "homepage": "https://github.com/fischi20"
+    }
+  ],
+  "version": "1.0.0",
   "license": "MIT",
   "autoload": {
     "psr-4": {
@@ -11,8 +22,8 @@
   "extra": {
     "shopware-plugin-class": "Chat\\Chat",
     "label": {
-      "de-DE": "Skeleton plugin",
-      "en-GB": "Skeleton plugin"
+      "de-DE": "Chat plugin",
+      "en-GB": "Chat plugin"
     }
   }
 }
